<resources>
    <string name="app_name">Taxi Big Way</string>
    <string name="action_settings">Settings</string>
    <string name="SigIn">Inciar sesión</string>
    <string name="sigUp">Registrar</string>
    <string name="name">Nombre</string>
    <string name="apaterno">Apellido paterno</string>
    <string name="amaterno">Apellido materno</string>
    <string name="dni">DNI</string>
    <string name="password">Contraseña</string>
    <string name="verificaPassword">Confirmar contraseña</string>
    <string name="email">Email</string>
    <string name="Registrar">Registrar</string>
    <string name="celular">Celular</string>
    <string name="mensajeRegistro">Usted debe completar todos los campos marcados como obligatorios para completar el registro</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_maps">Map</string>
    <string name="miUbicacion">Mi Ubicacion</string>
    <string name="CamposObligatorios">Todos los campos son obligatorios</string>
    <string name="Actualizar">Actualizar</string>
    <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>
    <string name="NoServicio">No hay Servicio para este direccion</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="vip">Vip</string>
    <string name="Economico">Económico</string>
    <string name="Ok">Ok</string>
    <string name="cancelar">Cancelar</string>
    <string name="detalleServicio">Detalle del servicio</string>
    <string name="InternetAccessRevision">No tiene acceso a internet  !!!</string>
    <string name="MensajeDestinoFinal">Ingrese Direccion de inicio y destino</string>
    <string name="coverturaZonas">No hay covertura para este lugar
                    Llame a nuestra central</string>
    <string name="msnAlert">Alerta !!!</string>
    <string name="gpsMensaje">El sistema GPS esta desactgivado, la aplicacion necesita del GPS,                     Tiene que activarlo !!!</string>
    <string name="llamarCentral">LLame a nuestra central</string>
    <string name="telefono1"><u>TELEFONO 1</u></string>
</resources>
