<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:id="@+id/scrollView">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/marginRigth"
            android:layout_marginLeft="@dimen/marginLeft"
            android:gravity="center">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/imagDriver"
                android:src="@mipmap/ic_imagen_launcher"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/padinP"
            android:layout_marginTop="10dp"
            android:orientation="vertical">


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:textColorHint="@color/hintColorText"
                    android:paddingLeft="@dimen/padinLeft"
                    android:hint="@string/name"
                    android:ems="10"
                    android:id="@+id/editName" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/padinLeft"
                    android:textColorHint="@color/hintColorText"
                    android:inputType="textPersonName"
                    android:hint="@string/apaterno"
                    android:ems="10"
                    android:id="@+id/editApaterno"
                    android:layout_gravity="center_horizontal" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/padinLeft"
                    android:textColorHint="@color/hintColorText"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:hint="@string/amaterno"
                    android:id="@+id/editAmaterno"
                    android:layout_gravity="center_horizontal" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:paddingLeft="@dimen/padinLeft"
                    android:textColorHint="@color/hintColorText"
                    android:hint="@string/dni"
                    android:enabled="false"
                    android:ems="10"
                    android:id="@+id/editDNI"
                    android:layout_gravity="center_horizontal" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:enabled="false"
                    android:paddingLeft="@dimen/padinLeft"
                    android:textColorHint="@color/hintColorText"
                    android:hint="@string/email"
                    android:ems="10"
                    android:id="@+id/editEmail"
                    android:layout_gravity="center_horizontal" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/padinLeft"
                    android:textColorHint="@color/hintColorText"
                    android:hint="@string/celular"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/editCelular"
                    android:layout_gravity="center_horizontal" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="@dimen/marginLine"
                    android:background="@drawable/selector_buton"
                    android:textColor="#FFFFFF"
                    android:text="@string/Actualizar"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>